Styled display for desktop

--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
   <link rel="stylesheet" href="styles.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet"/>
-  <script src="script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 </head>
 <body>
   <main>
     <div class="container">
-      <div class="logo landscape-bg">
+      <div class="logo bg">
         <img src="images/logo.svg"/>
       </div>
-      <div class="text landscape-bg">
+      <div class="text bg">
         <h1>We're</h1>
           <h2>coming</h2>
           <h2>soon</h2>
@@ -27,6 +27,9 @@
         <input type="email" placeholder=" Email Address"/>
         <button type="submit"><img src="images/icon-arrow.svg" alt="submit email"/></button>
       </form>
+      <span class="alert">
+        <h3>Please provide a valid email</h3>
+      </span>
     </div>
     <div class="photo">
       <picture>
@@ -35,7 +38,7 @@
         <img src="images/hero-mobile.jpg"/>
       </picture>
     </div>
-      <footer class="landscape-bg">
+      <footer class="bg">
         <p class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
           Coded by <a href="#">Shha5</a>.
