--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <footer class="bg">
         <p class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="#">Shha5</a>.
+          Coded by <a href="https://www.frontendmentor.io/profile/Shha5">Shha5</a>.
         </p>
       </footer>
     </div>
