fixed button, alert and validation script

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input type="email" id="email" placeholder=" Email Address" onkeydown="validation()"/>
         <button type="submit"><img src="images/icon-arrow.svg" alt="submit email"/></button>
       </form>
-      <span id="alert"></span>
+      <span id="alert">Please provide a valid email</span>
     </div>
     <div class="photo">
       <picture>
