--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet"/>
-  <script type="text/javascript" src="script.js"></script>
+  <script src="script.js"></script>
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 </head>
 <body>
   <main>
     <div class="container">
       <div class="logo bg">
-        <img src="images/logo.svg"/>
+        <img src="images/logo.svg" alt="Base Apparel Logo"/>
       </div>
       <div class="text bg">
         <h1>We're</h1>
@@ -33,7 +33,7 @@
       <picture>
         <source media="(orientation:portrait)" srcset="images/hero-mobile.jpg"/>
         <source media="(orientation:landscape)" srcset="images/hero-desktop.jpg"/>
-        <img src="images/hero-mobile.jpg"/>
+        <img src="images/hero-mobile.jpg" alt="A woman with brown hair and brown eyes dressed in orange shirt"/>
       </picture>
     </div>
       <footer class="bg">
